--- a/ereuse_devicehub/resources/device/templates/devices/layout.html
+++ b/ereuse_devicehub/resources/device/templates/devices/layout.html
@@ -10,17 +10,30 @@
         crossorigin="anonymous">
   <script src="https://use.fontawesome.com/7553aecc27.js"></script>
   <title>Devicehub | {{ device.__format__('t') }}</title>
+  <style>
+    /*Sticky footer*/
+    html {
+      position: relative;
+      min-height: 100%;
+    }
+
+    body {
+      margin-bottom: 60px; /* Margin bottom by footer height */
+    }
+
+    .footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 6em;
+    }
+  </style>
 </head>
 <body>
 
 <nav class="navbar navbar-default" style="background-color: gainsboro; margin: 0 !important">
-  <div class="container-fluid">
-    <a href="https://www.ereuse.org/" target="_blank">
-      <img alt="Brand"
-           class="center-block"
-           style="height: 4em; padding-bottom: 0.1em"
-           src="{{ url_for('Device.static', filename='ereuse-logo.svg') }}">
-    </a>
+  <div class="container-fluid text-center">
+    <h1><em>LoT Bcn</em> — Library of Things Barcelona</h1>
   </div>
 </nav>
 <div class="container-fluid">
@@ -205,5 +218,22 @@
     </div>
   </div>
 </div>
+<footer class="container-fluid footer">
+  <div class="row">
+    <div class="col-md-4">
+      Un projecte de:<br>
+      <img style="height: 4em" src="{{ url_for('Device.static', filename='rezero.logo.png') }}">
+      <img style="height: 3em" src="{{ url_for('Device.static', filename='nusos.logo.png') }}">
+    </div>
+    <div class="col-md-4">
+      Amb la col.laboració de:<br>
+      <img style="height: 4em" src="{{ url_for('Device.static', filename='ereuse-logo.svg') }}">
+    </div>
+    <div class="col-md-4">
+      Activitat subvencionada per:<br>
+      <img style="height: 4em" src="{{ url_for('Device.static', filename='amb.logo.jpg') }}">
+    </div>
+  </div>
+</footer>
 </body>
 </html>
