--- a/ereuse_devicehub/resources/documents/templates/documents/erasure.html
+++ b/ereuse_devicehub/resources/documents/templates/documents/erasure.html
@@ -1,7 +1,7 @@
 {% extends "documents/layout.html" %}
 {% block body %}
     <div>
-        <h2>Resumé</h2>
+        <h2>Summary</h2>
         <table class="table table-bordered">
             <thead>
             <tr>
