first iteration integration with blockchain

--- a/ereuse_devicehub/resources/documents/templates/documents/layout.html
+++ b/ereuse_devicehub/resources/documents/templates/documents/layout.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet"
           type="text/css"
           href="{{ url_for('Document.static', filename='print.css') }}">
-    <title>Devicehub | {{ title }}</title>
+    <title>USOdy | {{ title }}</title>
 </head>
 <body>
 <div class="container">
