fixing title page

--- a/ereuse_devicehub/resources/documents/templates/documents/stamp.html
+++ b/ereuse_devicehub/resources/documents/templates/documents/stamp.html
@@ -8,7 +8,7 @@
           integrity="sha384-+ENW/yibaokMnme+vBLnHMphUYxHs34h9lpdbSLuAwGkOKFRl4C34WkjazBtb7eT"
           crossorigin="anonymous">
     <script src="https://use.fontawesome.com/7553aecc27.js"></script>
-    <title>Devicehub | Tower hp compaq 8100 elite sff</title>
+    <title>Devicehub | Stamp create and Stamp verify</title>
     <style>
         /*Sticky footer*/
         html {
