fixing url of link

--- a/ereuse_devicehub/resources/documents/templates/documents/stamp.html
+++ b/ereuse_devicehub/resources/documents/templates/documents/stamp.html
@@ -39,10 +39,10 @@
 <div class="container-fluid">
     <div class="page-header col-md-6 col-md-offset-3">
       <div class="row">
-        <a href="http://dlt.ereuse.org/stamps/create?url=https://api.testing.usody.com/usodybeta/documents/check" target="_blank">Add one new check in your csv</a>
+	      <a href="http://dlt.ereuse.org/stamps/create?url={{ rq_url }}" target="_blank">Add one new check in your csv</a>
       </div>
       <div class="row">
-        <a href="http://dlt.ereuse.org/stamps/check?url=https://api.testing.usody.com/usodybeta/documents/check" target="_blank">Verify a CSV file in here.</a>
+	      <a href="http://dlt.ereuse.org/stamps/check?url={{ rq_url }}" target="_blank">Verify a CSV file in here.</a>
       </div>
     </div>
 </div>
