--- a/ereuse_devicehub/resources/documents/templates/documents/erasure.html
+++ b/ereuse_devicehub/resources/documents/templates/documents/erasure.html
@@ -5,8 +5,6 @@
         <table class="table table-bordered">
             <thead>
             <tr>
-                <th>S/N</th>
-                <th>Tags</th>
                 <th>S/N Data Storage</th>
                 <th>Type of erasure</th>
                 <th>Result</th>
@@ -16,16 +14,6 @@
             <tbody>
             {% for erasure in erasures %}
                 <tr>
-                    {% if erasure.parent.serial_number %}
-                        <td>
-                            {{ erasure.parent.serial_number.upper() }}
-                        </td>
-                    {% else %}
-                        <td></td>
-                    {% endif %}
-                    <td>
-                        {{ erasure.parent.tags.__format__('') }}
-                    </td>
                     <td>
                         {{ erasure.device.serial_number.upper() }}
                     </td>
@@ -51,10 +39,19 @@
                 <dl>
                     <dt>Data storage:</dt>
                     <dd>{{ erasure.device.__format__('ts') }}</dd>
-                    <dt>Computer:</dt>
-                    <dd>{{ erasure.parent.__format__('ts') }}</dd>
-                    <dt>Tags:</dt>
-                    <dd>{{ erasure.parent.tags }}</dd>
+
+                    <dt>Computer where was erase:</dt>
+		    <dd>Title: {{ erasure.parent.__format__('ts') }}</dd>
+		    <dd>SystemId: {{ erasure.parent.id }}</dd>
+		    <dd>Hid: {{ erasure.parent.hid }}</dd>
+		    <dd>Tags: {{ erasure.parent.tags }}</dd>
+		    
+                    <dt>Computer where it resides:</dt>
+		    <dd>Title: {{ erasure.device.parent.__format__('ts') }}</dd>
+		    <dd>SystemId: {{ erasure.device.parent.id }}</dd>
+		    <dd>Hid: {{ erasure.device.parent.hid }}</dd>
+		    <dd>Tags: {{ erasure.device.parent.tags }}</dd>
+
                     <dt>Erasure:</dt>
                     <dd>{{ erasure.__format__('ts') }}</dd>
                     {% if erasure.steps %}
