accept all type of docs

--- a/ereuse_devicehub/resources/documents/templates/documents/stamp.html
+++ b/ereuse_devicehub/resources/documents/templates/documents/stamp.html
@@ -64,7 +64,7 @@
       <div class="col-md-6 col-md-offset-3">
       <form enctype="multipart/form-data" action="" method="post">
         <label for="name">Document: </label>
-        <input type="file" name="docUpload" accept="text/csv,application/pdf" /><br />
+        <input type="file" name="docUpload" accept="*" /><br />
         <input type="submit" id="send-signup" name="signup" value="Verify" />
       </form>
       </div>
