--- a/ereuse_devicehub/resources/documents/templates/documents/erasure.html
+++ b/ereuse_devicehub/resources/documents/templates/documents/erasure.html
@@ -42,13 +42,13 @@
 
                     <dt>Computer where was erase:</dt>
 		    <dd>Title: {{ erasure.parent.__format__('ts') }}</dd>
-		    <dd>SystemId: {{ erasure.parent.id }}</dd>
+		    <dd>DevicehubID: {{ erasure.parent.devicehub_id }}</dd>
 		    <dd>Hid: {{ erasure.parent.hid }}</dd>
 		    <dd>Tags: {{ erasure.parent.tags }}</dd>
 		    
                     <dt>Computer where it resides:</dt>
 		    <dd>Title: {{ erasure.device.parent.__format__('ts') }}</dd>
-		    <dd>SystemId: {{ erasure.device.parent.id }}</dd>
+		    <dd>DevicehubID: {{ erasure.device.parent.devicehub_id }}</dd>
 		    <dd>Hid: {{ erasure.device.parent.hid }}</dd>
 		    <dd>Tags: {{ erasure.device.parent.tags }}</dd>
 
