--- a/ereuse_devicehub/resources/documents/templates/documents/erasure.html
+++ b/ereuse_devicehub/resources/documents/templates/documents/erasure.html
@@ -87,6 +87,6 @@
         <a href="{{ url_pdf }}">Click here to download the PDF.</a>
     </div>
     <div class="print-only">
-        <a href="{{ url_web }}">Verify on-line the integrity of this document</a>
+        <a href="{{ url_for('Document.StampsView', _external=True) }}">Verify on-line the integrity of this document</a>
     </div>
 {% endblock %}
