--- a/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
@@ -1,4 +1,4 @@
-{% extends "ereuse_devicehub/base.html" %}
+{% extends "ereuse_devicehub/base_site.html" %}
 {% block main %}
 
 <div class="pagetitle">
