Define Stamps link to StampsView

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -167,7 +167,7 @@
     </li><!-- End Labels Page Nav -->
 
     <li class="nav-item">
-      <a class="nav-link collapsed" href="#TODO">
+      <a class="nav-link collapsed" href="{{ url_for('Document.StampsView') }}">
         <i class="bi bi-pin-map-fill"></i>
         <span>Stamp</span>
       </a>
