Add USOdy logo to login & navbar

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -5,8 +5,7 @@
 
   <div class="d-flex align-items-center justify-content-between">
     <a href="index.html" class="logo d-flex align-items-center">
-      <img src="{{ url_for('static', filename='img/logo.png') }}" alt="">
-      <span class="d-none d-lg-block">NiceAdmin</span>
+      <img src="{{ url_for('static', filename='img/usody-logo-black.svg') }}" alt="">
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
   </div><!-- End Logo -->
