--- a/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
@@ -9,9 +9,8 @@
           <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
             <div class="d-flex justify-content-center py-4">
-              <a href="index.html" class="logo d-flex align-items-center w-auto">
-                <img src="{{ url_for('static', filename='img/logo.png') }}" alt="">
-                <span class="d-none d-lg-block">NiceAdmin</span>
+              <a href="{{ url_for('core.login') }}" class="logo d-flex align-items-center w-auto">
+                <img src="{{ url_for('static', filename='img/usody-logo-black.svg') }}" alt="">
               </a>
             </div><!-- End Logo -->
 
